<resources>
    <string name="app_name">Tarkov Builder</string>

    <string name="goBack_name">You Have No Saved Builds, Return to Builder</string>

    <string name="old_name">Start Building</string>

    <string name="grip_name">Grip</string>

    <string name="weapon_name">Weapon</string>

    <string name="item_name">Item</string>

    <string name="position_name">Position</string>

    <string name="upper_name">Upper Receiver</string>

    <string name="buffer_name">Buffer Tube</string>

    <string name="stock_name">Stock</string>

    <string name="scope_name">Scope</string>

    <string name="barrel_name">Barrel</string>

    <string name="gas_name">Gas Block</string>

    <string name="muzzle_name">Muzzle Device</string>

    <string name="suppressor_name">Suppressor</string>

    <string name="handguard_name">Handguard</string>

    <string name="foregrip_name">Foregrip</string>

    <string name="light_name">Lasers/Flashlights</string>

    <string name="frontsight_name">Front Ironsight</string>

    <string name="backmount_name">Backup Sight Mount</string>

    <string name="backsight_name">Backup Sight</string>

    <string-array name="numbers">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
    <string name="save_button">Save</string>
    <string name="load_button">Load</string>
    <string name="weight">Weight</string>
    <string name="accuracy">Accuracy</string>
    <string name="recoil_V">Vertical Recoil</string>
    <string name="recoil_H">Horizontal Recoil</string>
    <string name="ergo">Ergonomics</string>
    <string name="fire_rate">Fire Rate</string>
    <string name="caliber">Caliber</string>
    <string name="velocity">Velocity</string>
    <string name="damage">Damage</string>
    <string name="pen">Penetration</string>
    <string name="weapon">Weapon</string>
</resources>
